# cookiecutter-python-project

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_slug }}/: Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: cli.py
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_slug }}.py
